--- a/index.html
+++ b/index.html
@@ -411,6 +411,12 @@ z-index: 3;
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
 }
+@media screen and (min-width: 1000px) and (orientation: landscape){
+#everything { position: absolute; zoom: 130%;
+	left:250px;
+	top:80px; }
+#stuff { overflow: auto; overflow: scroll; }
+}
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
 #stuff { overflow: auto; overflow: scroll; }
