--- a/contact.html
+++ b/contact.html
@@ -410,6 +410,22 @@ z-index: 3;
     transform: rotate(90deg); }
 #stuff { overflow: auto; overflow: scroll; }
 }
+@media screen and (min-width: 1700px) and (orientation: landscape){
+#everything { position: absolute; zoom: 130%;
+	left:240px;
+	top:80px; }
+#stuff { overflow: auto; overflow: scroll; }
+}
+@media screen and (min-width: 2000px) and (orientation: landscape){
+#everything { position: absolute; zoom: 100%; left:20px; top:10px;}
+#stuff { overflow: auto; overflow: scroll; }
+}
+@media screen and (min-width: 3000px) and (orientation: landscape){
+#everything { position: absolute; zoom: 260%;
+	left:240px;
+	top:80px; }
+#stuff { overflow: auto; overflow: scroll; }
+}
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
 #stuff { overflow: auto; overflow: scroll; }
