--- a/gaming.html
+++ b/gaming.html
@@ -416,6 +416,8 @@ z-index: 3;
 	left:240px;
 	top:80px; }
 #stuff { overflow: auto; overflow: scroll; }
+#frame { -webkit-transform: scale(1.3);
+    transform: scale(1.3);}
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
@@ -426,6 +428,8 @@ z-index: 3;
 	left:240px;
 	top:80px; }
 #stuff { overflow: auto; overflow: scroll; }
+#frame { -webkit-transform: scale(2.6);
+    transform: scale(2.6);}
 }
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
