--- a/gaming.html
+++ b/gaming.html
@@ -417,7 +417,7 @@ z-index: 3;
 	top:80px; }
 #stuff { overflow: auto; overflow: scroll; }
 #frame { -webkit-transform: scale(1.3);
-    transform: scale(1.3);}
+    transform: scale(1.3); margin-left:125px; margin-top: 100px;}
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
@@ -429,7 +429,7 @@ z-index: 3;
 	top:80px; }
 #stuff { overflow: auto; overflow: scroll; }
 #frame { -webkit-transform: scale(2.6);
-    transform: scale(2.6);}
+    transform: scale(2.6); margin-left:185px; margin-top: 180px;}
 }
 @media screen and (max-width: 1000px) and (orientation: landscape){
 #everything { position: absolute; zoom: 100%; left:20px; top:10px;}
