--- a/contact.html
+++ b/contact.html
@@ -417,7 +417,7 @@ z-index: 3;
 #stuff { overflow: auto; overflow: scroll; }
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%; left:20px; top:10px;}
+#everything { position: absolute; zoom: 100%;}
 #stuff { overflow: auto; overflow: scroll; }
 }
 @media screen and (min-width: 3000px) and (orientation: landscape){
