--- a/gaming.html
+++ b/gaming.html
@@ -420,7 +420,7 @@ z-index: 3;
     transform: scale(1.3); margin-left:80px; margin-top: 60px;}
 }
 @media screen and (min-width: 2000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%; left:20px; top:10px;}
+#everything { position: absolute; zoom: 100%;}
 #stuff { overflow: auto; overflow: scroll; }
 }
 @media screen and (min-width: 3000px) and (orientation: landscape){
