--- a/blog.html
+++ b/blog.html
@@ -654,11 +654,11 @@ i made scripts for all the social media sites that i am currently using ( click 
             setInterval(volgendefotoyt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/twt.txt" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/RjowAzo.png"/></a>
+<a href="https://file.pooftie.me/js/twt.txt" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/CNjCkl5.png"/></a>
         <script type = "text/javascript">
             var imagetwt = document.getElementById("twt");
             var currentPostwt = 0;
-            var imagestwt = ["https://i.imgur.com/W8DM4St.png", "https://i.imgur.com/umDjhKa.png"]
+            var imagestwt = ["https://i.imgur.com/CNjCkl5.png", "https://i.imgur.com/FKDoT3H.png"]
 
             function volgendefototwt() {
                 if (++currentPostwt >= imagestwt.length)
