--- a/blog.html
+++ b/blog.html
@@ -1002,7 +1002,7 @@ it turned out just the way i wanted, and i even got to include tiny bits of horr
 i don't know if you fluffies are aware of it, but i'm actually a huge fan of horror ( psychological horror, to be more specific ) , gothic fashion ( especially gothloli ) , and also halloween .. so i have to hold myself back a lot when it comes to these things, heh <sub>🤍</sub>
 i hope to be able to come back with some gothic furniture and extra cute clothes next year, oh i can't wait !
 
-for helping me working on the frilly, creepy & cute aesthetic, i took inspiration from the works of two artists i admire very much, being one of them a dear friend of mine : <a id="linkbjinho" href="https://dollbabyheart.wixsite.com/babydollsketchbook" target="_blank">babydollsheart</a> <font color="#d3a5a5" style="font-size:11px;">♡</font>
+for helping me working on the frilly, creepy & cute aesthetic, i took inspiration from the works of two artists i admire very much, being one of them a dear friend of mine : <a id="linkbjinho" href="https://dollrosenheart.wixsite.com/sketchblog" target="_blank">babydollsheart</a> <font color="#d3a5a5" style="font-size:11px;">♡</font>
 doll released again some coloring pages, and of course i couldn't avoid coloring them as soon as i could download :
 </pre>
 <br>
