--- a/fashion.html
+++ b/fashion.html
@@ -644,9 +644,13 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/009.jpg"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/10.jpg"/><br><br>
+<br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/0011.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/011.jpg"/><br><br>
 <br>
@@ -657,6 +661,8 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://file.pooftie.me/f/13.png"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/14.jpg"/><br><br>
+<br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/015.png"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/15.png"/><br><br>
 <br>
