--- a/fashion.html
+++ b/fashion.html
@@ -662,7 +662,7 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/14.jpg"/><br><br>
 <br>
-<img width="300px" height="auto" src="https://file.pooftie.me/f/015.png"/><br><br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/015.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/15.png"/><br><br>
 <br>
