--- a/blog.html
+++ b/blog.html
@@ -730,7 +730,7 @@ yes, i can't possibly avoid all the issues unless i stop using these platforms a
 this is good enough for now, i’m proud of my efforts for the time being !!
 
 i will keep trying my best to create content for now, even with all limitations, because i need these social platforms for reaching people and keeping contact with the <a id="linkbjinho" href="https://poofties.middlepot.com" target="_blank">poofties</a> community. i know i don't post a lot, and i apologize for that .. it is very hard for me, but i know you fluffies are looking forward to the content i post on my accounts. i want to inspire & comfort you all, so i try to keep going, as i can. <sub>🦋</sub>
-once i can release my puf café project, finish working on my discord server and the puf bot, i hope to finally free myself and be able to post content in a safe place where i can do things as i like <font color="#d3a5a5" style="font-size:11px;">♡</font>
+once i can release my puf café project, finish working on the puf bot, i hope to finally free myself and be able to post content in a safe place where i can do things as i like <font color="#d3a5a5" style="font-size:11px;">♡</font>
 ( i will share more detailed information about those projects in future posts ! )
 
 well, it's always easier said than done : don't compare your growth to other peoples', don't pay attention to numbers, don't keep reading rude words, don't get involved in drama .. of course you shouldn't do any of that, but it's too hard to avoid when it's all over the place !!
@@ -1862,7 +1862,6 @@ function resetPlayer() {
 !!! i'm very happy with the outcome, editing it was hard <sub>💻</sub>
 i also made an exclusive website for the game, that you can access at <a id="linkbjinho" href="https://myfluffy.life" target="_blank">myfluffy.life</a> ( a neat domain, isn't it ? )
 there you will be able to read more about the game, access the link for all the platforms where the game will be released, play it directly on your browser, and contact us for support.
-very soon, you'll also get the invite to the poofties' discord server !!
 both the website and the game have full english, portuguese and japanese translation.
 i paid a translator for helping me with most phrases, because my japanese is very basic.. but somehow i managed to do a lot by myself, since the game is childish and cute, only hiragana & katakana would do <sub>👶</sub>
 </pre>
@@ -1955,7 +1954,7 @@ i wanted to make a separate website for the poofties brand for quite some time, 
 
 <font size = 1><font color="#B1A69E">
 <br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-on <a id="linkbjinho" href="https://poofties.middlepot.com" target="_blank">poofties.middlepot.com</a> you can access all projects related directly to the poofties, and i already kept a link for the "puf bot" website that i'll be making soon ( yes, the bot will not only be only made for discord.. but i'm not giving spoilers of this project today ) <sub>💻</sub>
+on <a id="linkbjinho" href="https://poofties.middlepot.com" target="_blank">poofties.middlepot.com</a> you can access all projects related directly to the poofties, and i already kept a link for the "puf bot" website that i'll be making soon ( yes, the bot will not be actually made for discord.. but i'm not giving spoilers of this project today ) <sub>💻</sub>
 as always, i'll keep posting relevant poofties content here on this blog, but please make sure to visit the poofties site as well !
 
 talking on poofties, i remade and renamed my font that i use for some content ( including "my fluffy life" , story templates titles , etc ) ..
