--- a/faq.html
+++ b/faq.html
@@ -1679,7 +1679,7 @@ yes, i can't possibly avoid all the issues unless i stop using these platforms a
 this is good enough for now, i’m proud of my efforts for the time being !!
 
 i will keep trying my best to create content for now, even with all limitations, because i need these social platforms for reaching people and keeping contact with the poofties community. i know i don't post a lot, and i apologize for that .. it is very hard for me, but i know you fluffies are looking forward to the content i post on my accounts. i want to inspire & comfort you all, so i try to keep going, as i can.
-once i can release my puf café project, finish working on my discord server and the puf bot, i hope to finally free myself and be able to post content in a safe place where i can do things as i like <font color="#d3a5a5" style="font-size:11px;">♡</font>
+once i can release my puf café project, finish working on the puf bot, i hope to finally free myself and be able to post content in a safe place where i can do things as i like <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
 well, it's always easier said than done : don't compare your growth to other peoples', don't pay attention to numbers, don't keep reading rude words, don't get involved in drama .. of course you shouldn't do any of that, but it's too hard to avoid when it's all over the place !!
 i noticed just how much i used to compare myself to other people and getting randomly upset with random drama that have nothing to do with me, when i stopped being able to do that. if i can't see it, i don't know it exist.
