--- a/faq.html
+++ b/faq.html
@@ -556,19 +556,20 @@ but please don't question me about supporting or not movements and communities, 
 <font color="#B1A69E">
 　<sub>🖇</sub> <font color="#91816b">𝑚𝑒𝑙𝑖𝑠𝑠𝑎</font>
 <br>
-melissa is my irl name. i really like my name, but i don't use it on the internet because it would be difficult to find me, you know. melissa is the name of a plant, the lemon balm. it is common for people to use this plant to make tea and for medicinal purposes. it has very small, white and delicate flowers. the meaning of this name is literally "honeybee", which makes people give some interesting interpretations to it. some people gave me the nickname "mel" ( which means literally honey ).
+melissa is my irl name. i really like my name, but i don't use it a lot on the internet because it would be difficult to find me. melissa is the name of a plant, the lemon balm. it has very small and white flowers. the meaning of my name is literally "honeybee", which makes people give some interesting interpretations to it. my friends and family gave me the nickname "mel" ( which means literally honey ).
 <br>
 <br>
 　<sub>🖇</sub> <font color="#91816b">𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡</font>
 <br>
-this is actually a surname, and i use it as "artistic signature" on my commercial works and accounts. i've used some variations of it ( midpot, mimipot ) in the past. it's not a real surname, i discovered it in a dream. at the time i was thinking of a nickname to use on the internet and i had just created the "poofties" project, so i was thinking about many things and characters, especially potatoes. i used the nickname "poteto" from time to time, because of that. one day i dreamed about potatoes and many other confusing things, including a very fat and giant cat that called me "melissa middlepot". he told me "you're bigger than your potato friends, but there are still bigger potatoes, believe me", even though i was not really a potato. well, i woke up really thinking that middlepot was good, it sounds like some english surnames. so, yes, i believe that "pot" is from "potato". be honest, "middlepot" is pretty cute, isn't it ?
+this is actually a surname, and i use it as "artistic signature" on my works. it's not a real surname, i discovered it in a dream. at the time i had created the "poofties" project, i was thinking about many things and characters. one day i dreamed about a giant white cat made of milk, who called me "melissa middlepot". it sounds elegant and unique ( no actual deep meaning behind it ) so i like using it online !
 <br>
 <br>
 　<sub>🖇</sub> <font color="#91816b">𝑝𝑢𝑓 / 𝑝𝑜𝑜𝑓𝑡𝑖𝑒</font>
 <br>
-puf is not just a nickname but actually a character from the poofti world, therefore, a pooftie. it's who i am, there ! middlepot is the surname that was given for me, but they don't call me like this, because it's too formal.. they neither call me melissa / mel ; they call me puf !<br>
-puf is a "softie", a metamorphic critter that can take the form of anything that is "soft" enough. it is often seen in the form of a teddy bear, bunny, lamb, or human girl ! sometimes a mix between these .. sometimes with wings, but it cannot fly. puf can't control its metamorphosis abilities, it happens suddenly and without explanation.<br>
-i like to use its name and variations as user in my "casual" accounts ! small and cute.<br><br>
+puf is not just a nickname but actually a character from the poofti world, therefore, a pooftie. it's who i am, there !<br>
+middlepot is the surname that was given for me by the milky cat, but my "pooftie self" is called puf - it comes from creampuff.<br>
+puf is a "softie", a metamorphic critter that can take the form of anything that is "soft" enough. she is often seen in the form of a teddy bear, bunny, lamb, or human girl ! sometimes a mix between these .. sometimes with wings, but she cannot fly.<br>
+i like to use her name and variations a lot ! small and cute.<br><br>
 <br><br><br><br><br><br>
 </font>
 
