--- a/faq.html
+++ b/faq.html
@@ -556,12 +556,15 @@ but please don't question me about supporting or not movements and communities, 
 <font color="#B1A69E">
 　<sub>🖇</sub> <font color="#91816b">𝑚𝑒𝑙𝑖𝑠𝑠𝑎</font>
 <br>
-melissa is my irl name. i really like my name, but i don't use it a lot on the internet because it would be difficult to find me. melissa is the name of a plant, the lemon balm. it has very small and white flowers. the meaning of my name is literally "honeybee", which makes people give some interesting interpretations to it. my friends and family gave me the nickname "mel" ( which means literally honey ).
+melissa is my name in real life. i really like my name, but i don't use it a lot on the internet because it is common, so it would be difficult to find me. melissa is the name of a plant, the lemon balm. the meaning of melissa is literally "honeybee", because its flowers are rich in nectar, so it is sometimes planted to feed bees.<br>
+its little white flowers, sometimes with a yellowish or pinkish tinge, bloom throughout the summer ( fun fact : i was born in august ! )<br>
+my friends and family sometimes call me "mel" , which means literally honey.
 <br>
 <br>
 　<sub>🖇</sub> <font color="#91816b">𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡</font>
 <br>
-this is actually a surname, and i use it as "artistic signature" on my works. it's not a real surname, i discovered it in a dream. at the time i had created the "poofties" project, i was thinking about many things and characters. one day i dreamed about a giant white cat made of milk, who called me "melissa middlepot". it sounds elegant and unique ( no actual deep meaning behind it ) so i like using it online !
+this is actually a surname, and i use it as "artistic signature" on my works. it is not a real surname, i discovered it in a dream by the time i was still concepting the "poofties" project. one day i dreamed about a giant white cat made of milk, who called me "melissa middlepot". i visualize it as : a melissa flower twig inside a pot, in the middle of a window sill.<br>
+i love this delicate concept, so i accepted it wholeheartedly !
 <br>
 <br>
 　<sub>🖇</sub> <font color="#91816b">𝑝𝑢𝑓 / 𝑝𝑜𝑜𝑓𝑡𝑖𝑒</font>
