--- a/faq.html
+++ b/faq.html
@@ -556,22 +556,30 @@ but please don't question me about supporting or not movements and communities, 
 <font color="#B1A69E">
 　<sub>🖇</sub> <font color="#91816b">𝑚𝑒𝑙𝑖𝑠𝑠𝑎</font>
 <br>
-melissa is my name in real life. i really like my name, but i don't use it a lot on the internet because it is common, so it would be difficult to find me. melissa is the name of a plant, the lemon balm. the meaning of melissa is literally "honeybee", because its flowers are rich in nectar, so it is sometimes planted to feed bees.<br>
+melissa is my name in real life. i really like my name, but i don't use it a lot on the internet because it's common, so it would be difficult to find me. melissa is the name of a plant, the lemon balm. the meaning of melissa is "honeybee", because its flowers are rich in nectar, so it is sometimes planted to feed bees.<br>
 its little white flowers, sometimes with a yellowish or pinkish tinge, bloom throughout the summer ( fun fact : i was born in august ! )<br>
 my friends and family sometimes call me "mel" , which means literally honey.
 <br>
 <br>
 　<sub>🖇</sub> <font color="#91816b">𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡</font>
 <br>
-this is actually a surname, and i use it as "artistic signature" on my works. it is not a real surname, i discovered it in a dream by the time i was still concepting the "poofties" project. one day i dreamed about a giant white cat made of milk, who called me "melissa middlepot". i visualize it as : a melissa flower twig inside a pot, in the middle of a window sill.<br>
+this is actually a surname, and i use it as "artistic signature" on my works. it is not a real surname, i discovered it in a dream by the time i was still concepting the "poofties" project. one day i dreamed about a giant white cat made of milk, who called me "melissa middlepot".<br>
+i visualize it as : a melissa flower twig inside a pot, in the middle of a window sill.<br>
 i love this delicate concept, so i accepted it wholeheartedly !
 <br>
 <br>
-　<sub>🖇</sub> <font color="#91816b">𝑝𝑢𝑓 / 𝑝𝑜𝑜𝑓𝑡𝑖𝑒</font>
+　<sub>🖇</sub> <font color="#91816b">𝑝𝑜𝑜𝑓𝑡𝑖𝑒</font>
 <br>
-puf is not just a nickname but actually a character from the poofti world, therefore, a pooftie. it's who i am, there !<br>
-middlepot is the surname that was given for me by the milky cat, but my "pooftie self" is called puf - it comes from creampuff.<br>
-puf is a "softie", a metamorphic critter that can take the form of anything that is "soft" enough. she is often seen in the form of a teddy bear, bunny, lamb, or human girl ! sometimes a mix between these .. sometimes with wings, but she cannot fly.<br>
+well, pooftie is not an actual name, but the way all the critters from the "poofti world" are called ( so, me included ! )<br>
+it is a fictional word that comes from "pooft" : one onomatopoeia for the muffled sound of something falling on the ground. all the species that inhabit poofti first arrived falling from the sky, so this is a way of remembering that they are equals, and should do their best to care of each other and work together for a happier future.<br>
+yes, that's why my brand is called "poofties" !
+<br>
+<br>
+　<sub>🖇</sub> <font color="#91816b">𝑝𝑢𝑓</font>
+<br>
+puf is actually a character from the poofti world. it's who i am, there !<br>
+middlepot is the surname that was given for me by the milky cat, but my "pooftie self" is called puf - it's a nickname that comes from creampuff.<br>
+puf is a "softie", a metamorphic critter that can take the form of anything that is "soft" enough. she is often seen in the form of a teddy bear, bunny, lamb, kitten, puppy, or even a human girl - sometimes with wings, but she cannot fly.<br>
 i like to use her name and variations a lot ! small and cute.<br><br>
 <br><br><br><br><br><br>
 </font>
